backend/k8s-specifications/treetrace-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: treetrace-backend
  labels:
    app: treetrace-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: treetrace-backend
  template:
    metadata:
      labels:
        app: treetrace-backend
    spec:
      containers:
      - name: treetrace-backend
        image: asad313/treetrace-backend
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: treetrace-backend-service
spec:
  selector:
    app: treetrace-backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
